# django-primer

./: .env_example  README.md  manage.py  pyproject.toml
django_primer/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
django_primer/migrations/: 0001_initial.py  0002_subject.py  0003_score.py  0004_populate_test_data.py
django_primer/models/: __init__.py  score.py  student.py  subject.py
django_primer/service/: student_statistics.py
django_primer/templates/: index.html
django_primer/tests/: test_student.py
django_primer/tests/models/: test_student.py
django_primer/tests/service/: test_student_statistics.py
